# assimp_test

./: CMakeLists.txt  ass.kdev4  main.cpp
.kdev4/: _custom.kdev4  ass.kdev4  assimp.kdev4
